--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,33 @@
 version: '3'
 
 services:
-  product-service:
-    build: ./product
+  nextcloud:
+    build: ./nc
     volumes:
-      - ./product:/usr/src/app
-    ports:
-      - 5001:80
-
-  website:
-    image: php:apache
-    volumes:
-      - ./website:/var/www/html
+      - ./nc/ncdata:/var/www/html
     ports:
       - 5000:80
-    depends_on:
-      - product-service
+    environment:
+        POSTGRES_HOST: db
+        POSTGRES_DB: ncdb
+        POSTGRES_USER: ncdb
+        POSTGRES_PASSWORD: docker
+        NEXTCLOUD_ADMIN_USER: nadm
+        NEXTCLOUD_ADMIN_PASSWORD: test1234
+        NEXTCLOUD_DATA_DIR: /var/www/html/data
+
+  db:
+    image: postgres
+    restart: always
+    volumes:
+      - ./db/vol:/var/lib/postgresql/data
+    ports:
+        - 5432:5432
+    environment:
+        POSTGRES_PASSWORD: docker
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+        - 8080:8080
